syntax = "proto3";
package schema.v1;

message Report {
	string project_name = 1;
	int32 project_id = 2;

	oneof state {
		Progress progress = 3;
		Complete complete = 4;
		Error error = 5;
	}

	oneof report_type {
		ProjectExport project_export = 6;
		ProjectPreview project_preview = 7;
	}

	message Progress {
		float percentage = 1;
		string message = 2;
	}

	message Complete {
		string path = 1;
	}

	message ProjectExport {
		int32 id = 1;
	}

	message ProjectPreview {
		int32 id = 1;
	}

	message Error {
		string message = 1;
	}
}
